--- a/templates/sign up.html
+++ b/templates/sign up.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,24 +16,11 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>회원가입!</title>
-    <style>
-        .wrap {
-            background-color: transparent;
+    <title>회원가입</title>
 
-            width: 400px;
-            margin: 100px auto;
+    <link rel="stylesheet" href="../static/css/sign_up.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-            text-align: center;
-
-            box-shadow: 0px 0px 5px gray;
-
-            padding: 20px;
-        }
-        .mytitle {
-            margin-bottom: 20px;
-        }
-    </style>
     <script type="text/javascript">
         function test() {
             var p1 = document.getElementById('password1').value;
@@ -75,10 +62,14 @@
 
         <div class="myidpw">
             <p><input type="text" placeholder="이름"></p>
-            <p><input type="text"></p>
+            <p><input type="text" placeholder="나이"></p>
 
-          <p><input type="text" class="username_input" name="username" check_result="fail" required/>
-            <button type="button" class="id_overlap_button" onclick="id_overlap_check()">중복검사</button>
+            <p><input type="text" placeholder="아이디" class="username_input" name="username" check_result="fail" required/>
+            <button type="button" class="id_overlap_button" onclick="id_overlap_check()">중복확인</button>
+<!--            <div class="input-group mb-3">-->
+<!--              <input type="text" class="form-control" placeholder="아이디" aria-label="Recipient's username" aria-describedby="button-addon2">-->
+<!--              <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="id_overlap_check()">중복확인</button>-->
+<!--            </div>-->
             <img id="id_check_sucess" style="display: none;"></p>
 
             <p><input type="password" id="password1" placeholder="비밀번호"></p>
