--- a/templates/login.html
+++ b/templates/login.html
@@ -2,30 +2,43 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/login.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="js/login.js">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+
+    <title>로그인</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/login.css">
+
+    <script>
+        function check(form) {
+            if(form.id.value==""&&form.password.value=="") {
+                window.open('target.html')
+            } else {
+                alert("Error ID or Password")
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
-        <h1>나의 운동 일지</h1>
-<!--        <div class="log_img"></div>-->
+        <h1>Workout log</h1>
     </header>
     <section>
         <h2>로그인</h2>
         <form name="login" action="" method="get">
             <div class="user_id">
-                <input type="text" name="id" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" />
+                <p><input type="text" name="id" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" /></p>
             </div>
             <div class="user_password">
-                <input type="password" name="password" placeholder="비밀번호를 입력하세요" minlength="6"/>
+                <p><input type="password" name="password" placeholder="비밀번호를 입력하세요" minlength="6"/></p>
             </div>
 
             <div class="button">
